# Search_Engine

./: .gitignore  CMakeLists.txt
http_server/: CMakeLists.txt  Database_serv.cpp  Database_serv.h  Exeption.h  Interface_serv.cpp  Interface_serv.h  Search_page.html  Server.cpp  Settings.ini  main.cpp  parser_ini.cpp  parser_ini.h
spider/: CMakeLists.txt  Database.cpp  Database.h  Settings.ini  Task.cpp  Task.h  http_client_async.cpp  http_client_async_ssl.cpp  http_utils.cpp  http_utils.h  main.cpp  parser_html.cpp  parser_html.h  parser_ini.cpp  parser_ini.h  root_certificates.hpp
